smooth-scrollbar and scrollMagic working PROPERLY for PINNING ELEMENTS, requires putting what is going to become fixed to be set to fixed from beginning

--- a/src/components/styles/shortbio.css
+++ b/src/components/styles/shortbio.css
@@ -1,7 +1,11 @@
 .shortbio {
-    background-color: rgb(10,10,10);
+    background-color: transparent;
+    height: 500vh;
+    width: 100vw;
+    position: relative;
+    z-index: -10;
 }
 
-.prebio {
+/* .prebio {
     background: linear-gradient(0, transparent, rgb(10,10,10), transparent)
-}
+} */
